tests/semantic/invalid/integer-slash.inox
Module InvalidIntegerSlash

Main() :
    Var
        X := 10 / 2
    ;
;
